Вынес в свг спрайты

--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -41,7 +41,7 @@
   font-family: "Arial", "Tahoma", sans-serif;
   color: #444444;
   text-decoration: none;
-  margin-right: 139px;
+  margin-right: 131px;
 }
 
 .footer__social-links-catalog {
@@ -105,6 +105,10 @@
 .footer__social-links-li:first-child {
   margin-right: -7px;
 }
+.right-logo__logo-organization {
+  width: 35px;
+  height: 35px;
+}
 }
 
 @media (min-width:@tablet){
@@ -115,9 +119,14 @@
 
 .footer__logo {
   margin-top: 18px;
-  margin-left: -13px;
+  margin-left: -11px;
   border: 0;
   width: 145px;
+}
+
+.footer__social-links-li:first-child {
+  margin-right: 1px;
+  margin-left: 4px;
 }
 
 .footer__footer-content {
@@ -130,6 +139,16 @@
 .footer__footer-logo {
   padding-bottom: 0;
   width: 132px;
+}
+
+.footer__social-links-li-facebook {
+  margin-left: -1px;
+  margin-top: -4px;
+}
+
+.right-logo__link-organization {
+  margin-right: 0;
+  margin-top: -4px;
 }
 
 .footer__right-logo {
@@ -191,6 +210,33 @@
     padding-top: 45px;
   }
 
+  .right-logo__link-organization {
+    margin-right: 0;
+    margin-top: 3px;
+}
+
+  .footer__social-links-li:first-child {
+    margin-right: -7px;
+    padding-left: 2px;
+}
+
+.footer__social-links-li-facebook {
+  margin-left: -10px;
+}
+
+  .footer__social-links {
+    margin-top: -12px;
+    padding-left: 0;
+    max-width: 125px;
+}
+
+  .footer__logo {
+    margin-top: 19px;
+    margin-left: -12px;
+    border: 0;
+    width: 145px;
+}
+
   .footer-catalog {
     padding-top: 41px;
   }
@@ -212,5 +258,9 @@
 }
 .footer__social-links-li {
   margin-right: 7px;
+}
+.right-logo__logo-organization {
+  width: 35px;
+  height: 42px;
 }
 }
