--- a/source/less/header-background.less
+++ b/source/less/header-background.less
@@ -112,6 +112,11 @@
   .header-background__desktop-img {
     display: none;
   }
+  .header-background__img {
+    position: absolute;
+    top: 167px;
+    left: 20px;
+  }
 
   .header-background {
     padding: 27px 0 0 0;
@@ -200,7 +205,7 @@ display: none;
     }
     .check-your-program {
     margin-bottom: 507px;
-    margin-top: 47px;
+    margin-top: 49px;
     max-width: 246px;
     margin-left: 115px;
     font-size: 20px;
