--- a/source/less/how-it-is-work.less
+++ b/source/less/how-it-is-work.less
@@ -41,6 +41,9 @@
     margin-top: 5px;
     margin-bottom: 20px;
   }
+  .works-item__image {
+    margin-top: 5px;
+  }
   .how-it-is-work__header {
     font-size: 36px;
     line-height: 60px;
