--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -173,6 +173,10 @@ color: #222222;
     border-bottom: 1px solid #68b738;
     padding-bottom: 6px;
   }
+  .page-header__menu-main-sub-menu-elem-link--active {
+    border-bottom: 1px solid #68b738;
+    padding-bottom: 7px;
+  }
 }
 
 @media (min-width: @desktop) {
@@ -182,6 +186,11 @@ color: #222222;
     margin-top: 7px;
     max-width: 202px;
     padding-left: 0;
+  }
+
+  .page-header__menu-main-sub-menu-elem-link--catalog-active {
+    padding-bottom: 8px;
+    border-bottom: 2px solid #68b738;
   }
 
   .page-header__menu-main-sub-menu-elem-link--form {
@@ -229,9 +238,9 @@ color: #222222;
     color: #ffffff;
   }
 
-  .page-header__menu-main-sub-menu-elem-li--active {
+  .page-header__menu-main-sub-menu-elem-link--active {
     border-bottom: 1px solid #ffffff;
-    padding-bottom: 6px;
+    padding-bottom: 7px;
   }
 .page-header__menu-main-sub-menu-elem-link--catalog {
   font-size: 20px;
